--- a/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch01/01_05/index.html
+++ b/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch01/01_05/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="styles/base.css" type="text/css">
 </head>
 <body>
-
+    <nav>Header</nav>
+    <main>
+        MAIN
+        <article></article>
+        <aside class="left-aside">LEFT</aside>
+        <aside class="right-aside">RIGHT</aside>
+    </main>
+    <footer>FOOTER</footer>
 </body>
 </html>
