Excercise 1 flexbox layout

--- a/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch01/01_05/index.html
+++ b/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch01/01_05/index.html
@@ -9,8 +9,8 @@
 <body>
     <nav>Header</nav>
     <main>
-        MAIN
-        <article></article>
+        
+        <article>MAIN</article>
         <aside class="left-aside">LEFT</aside>
         <aside class="right-aside">RIGHT</aside>
     </main>
